--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "bcrypt": "^5.1.1"
+    "bcrypt": "^5.1.1",
+    "mongoose": "^8.2.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2"
