--- a/.github/workflows/deploy-vps.yml
+++ b/.github/workflows/deploy-vps.yml
@@ -45,7 +45,7 @@ jobs:
           PROJECT_PATH: ${{ secrets.PROJECT_PATH }}
         run: |
           ssh -o StrictHostKeyChecking=no -p ${VPS_PORT} ${VPS_USER}@${VPS_HOST} << 'EOF'
-            cd ${PROJECT_PATH}
+            cd ${PROJECT_PATH}/NaoLibre
             git pull origin main
             docker compose down || true
             docker compose pull || true
