--- a/.github/workflows/deploy-vps.yml
+++ b/.github/workflows/deploy-vps.yml
@@ -44,7 +44,7 @@ jobs:
           VPS_PORT: ${{ secrets.VPS_PORT }}
           PROJECT_PATH: ${{ secrets.PROJECT_PATH }}
         run: |
-          ssh -o StrictHostKeyChecking=no -p ${VPS_PORT} ${VPS_USER}@${VPS_HOST} << 'EOF'
+          ssh -o StrictHostKeyChecking=no -p ${VPS_PORT} ${VPS_USER}@${VPS_HOST} << EOF
             cd ${PROJECT_PATH}/NaoLibre
             git pull origin main
             docker compose down || true
