--- a/.github/workflows/deploy-vps.yml
+++ b/.github/workflows/deploy-vps.yml
@@ -44,10 +44,11 @@ jobs:
           VPS_PORT: ${{ secrets.VPS_PORT }}
           PROJECT_PATH: ${{ secrets.PROJECT_PATH }}
         run: |
-          ssh -o StrictHostKeyChecking=no -p ${VPS_PORT} ${VPS_USER}@${VPS_HOST} << EOF
-            cd ${PROJECT_PATH}/NaoLibre
-            git pull origin main
-            docker compose down || true
-            docker compose pull || true
-            docker compose up -d --build
-          EOF
+            ssh -o StrictHostKeyChecking=no -p ${VPS_PORT} ${VPS_USER}@${VPS_HOST} << EOF
+                cd ${PROJECT_PATH}/NaoLibre
+                git config --global --add safe.directory ${PROJECT_PATH}/NaoLibre
+                git pull origin main
+                docker-compose down || true
+                docker-compose pull || true
+                docker-compose up -d --build
+            EOF
