Ajout des variables d'environnement pour les URLs des APIs dans le fichier .env et mise à jour du Dockerfile et des constantes pour les utiliser

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ PORT_API_USER=8081
  
 # Web app host port
 WEB_PORT=3000
+
+# URLs des APIs pour le frontend React
+REACT_APP_API_TAN_URL=http://localhost:8080/tan/
+REACT_APP_API_USER_URL=http://localhost:8081/NaoLibre/
