--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,11 @@ services:
       - mongo
 
   web:
-    build: ./web-app
+    build:
+      context: ./web-app
+      args:
+        REACT_APP_API_TAN_URL: ${REACT_APP_API_TAN_URL}
+        REACT_APP_API_USER_URL: ${REACT_APP_API_USER_URL}
     restart: on-failure
     env_file: .env
     ports:
