--- a/web-app/Dockerfile
+++ b/web-app/Dockerfile
@@ -3,6 +3,11 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm ci
 COPY . .
+# Les variables REACT_APP_* doivent être définies au moment du build
+ARG REACT_APP_API_TAN_URL
+ARG REACT_APP_API_USER_URL
+ENV REACT_APP_API_TAN_URL=$REACT_APP_API_TAN_URL
+ENV REACT_APP_API_USER_URL=$REACT_APP_API_USER_URL
 RUN npm run build
 
 FROM node:20-alpine
